# current-date-bench

./: .gitignore  README.md  pyproject.toml
cache/anthropic--claude-opus-4.5/run_1/: rep_1.json  rep_2.json  rep_3.json  rep_4.json  rep_5.json
cache/anthropic--claude-opus-4.5/run_2/: rep_1.json  rep_2.json  rep_3.json  rep_4.json  rep_5.json
cache/anthropic--claude-opus-4.5/run_3/: rep_1.json  rep_2.json  rep_3.json  rep_4.json  rep_5.json
cache/anthropic--claude-opus-4.5/run_4/: rep_1.json  rep_2.json  rep_3.json  rep_4.json  rep_5.json
cache/anthropic--claude-opus-4.5/run_5/: rep_1.json  rep_2.json  rep_3.json  rep_4.json  rep_5.json
cache/anthropic--claude-opus-4.5@none-t0.7/current_date/: rep_1.json  rep_10.json  rep_2.json  rep_3.json  rep_4.json  rep_5.json  rep_6.json  rep_7.json  rep_8.json  rep_9.json
cache/anthropic--claude-opus-4.5@none-t0.7/forced_reasoning/: rep_1.json  rep_10.json  rep_2.json  rep_3.json  rep_4.json  rep_5.json  rep_6.json  rep_7.json  rep_8.json  rep_9.json
cache/anthropic--claude-opus-4.5@none-t0.7/what_is_date_today/: rep_1.json  rep_10.json  rep_2.json  rep_3.json  rep_4.json  rep_5.json  rep_6.json  rep_7.json  rep_8.json  rep_9.json
configs/: models.yaml
results/: LEADERBOARD.md  results_20260323_164417.json  results_20260323_183845.json  results_20260325_141616.json  results_20260325_192104.json  results_20260325_203235.json  results_20260325_203837.json
src/: cache.py  cli.py  config.py  cost_tracker.py  evaluator.py  leaderboard.py  openrouter_client.py  runner.py  scorer.py
(+1550 files in other folders)
