[build-system]
requires = ["setuptools>=68.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "current-date-bench"
version = "0.1.0"
description = "Benchmark: do LLMs know the current date? Tests with empty system prompt and classifies responses."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
current-date-bench = "src.cli:cli"

[tool.setuptools.packages.find]
include = ["src*"]
